--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,13 @@
 {
-  "presets": [
-    "@babel/preset-flow",
-    "@babel/preset-react",
-    ["@babel/preset-env", { "modules": false }]
+  "presets": ["es2015", "react"],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ],
   "env": {
     "test": {
-      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+      "plugins": ["istanbul"]
     }
-  },
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-object-rest-spread"
-  ]
+  }
 }
