--- a/package.json
+++ b/package.json
@@ -1,61 +1,60 @@
 {
-  "name": "react-waterfall",
-  "version": "4.0.0-beta.3",
+  "name": "react-context-state",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "author": "Jefree Sujit <e.jefree110@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jefreesujit/react-context-state/issues"
+  },
+  "homepage": "https://github.com/jefreesujit/react-context-state#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/jefreesujit/react-context-state.git"
+  },
   "files": [
     "index.js",
     "package.json",
     "README.md",
     "dist/"
   ],
-  "scripts": {
-    "build": "rollup -c -m && yarn gen-flow",
-    "gen-flow": "cp src/types.js dist/react-waterfall.js.flow",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/didierfranc/react-waterfall.git"
-  },
   "keywords": [
     "react",
     "redux",
     "context",
-    "store"
+    "store",
+    "state"
   ],
-  "author": "Didier Franc <didierfranc@me.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/didierfranc/react-waterfall/issues"
-  },
-  "homepage": "https://github.com/didierfranc/react-waterfall#readme",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.47",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.47",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.47",
-    "@babel/preset-env": "^7.0.0-beta.47",
-    "@babel/preset-flow": "^7.0.0-beta.47",
-    "@babel/preset-react": "^7.0.0-beta.47",
-    "babel-core": "^7.0.0-0",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.4",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
-    "flow-bin": "^0.72.0",
-    "jest": "^22.4.4",
+    "babel": "^6.3.13",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.3.21",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-istanbul": "^1.0.2",
+    "babel-plugin-react-transform": "^2.0.0-beta1",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "cross-env": "^5.1.4",
+    "envify": "^1.2.1",
+    "envify-loader": "^0.1.0",
     "node-fetch": "^2.1.2",
+    "node-sass": "^4.8.3",
+    "node-sass-import": "^1.0.0",
+    "npm-run-all": "^4.0.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-test-renderer": "^16.3.2",
-    "regenerator-runtime": "^0.11.1",
-    "rollup": "^0.59.1",
-    "rollup-plugin-babel": "^4.0.0-beta.4",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
+  },
+  "scripts": {
+    "build": "cross-env NODE_ENV=development babel src --out-dir dist",
+    "build:example": "cross-env NODE_ENV=development webpack --progress --color",
+    "test": "echo 1"
   },
   "peerDependencies": {
     "react": "^16.3.0",
