--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "store",
     "state"
   ],
+  "dependencies": {
+    "keypather": "^3.0.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
+  },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
@@ -45,8 +51,6 @@
     "node-sass": "^4.8.3",
     "node-sass-import": "^1.0.0",
     "npm-run-all": "^4.0.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
     "webpack": "^3.12.0",
     "webpack-cli": "^2.0.13"
   },
