--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.3.21",
+    "babel-jest": "^23.2.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-istanbul": "^1.0.2",
     "babel-plugin-react-transform": "^2.0.0-beta1",
@@ -47,6 +48,9 @@
     "cross-env": "^5.1.4",
     "envify": "^1.2.1",
     "envify-loader": "^0.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^23.3.0",
     "node-fetch": "^2.1.2",
     "node-sass": "^4.8.3",
     "node-sass-import": "^1.0.0",
@@ -57,10 +61,13 @@
   "scripts": {
     "build": "cross-env NODE_ENV=development babel src --out-dir dist",
     "build:example": "cross-env NODE_ENV=development webpack --progress --color",
-    "test": "echo 1"
+    "test": "jest"
   },
   "peerDependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./test/configure.js"
   }
 }
