--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -47,15 +48,23 @@
     "envify-loader": "^0.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "gzip-size": "^4.1.0",
     "jest": "^23.3.0",
     "node-sass": "^4.8.3",
     "node-sass-import": "^1.0.0",
     "npm-run-all": "^4.0.2",
+    "pretty-bytes": "^5.1.0",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^4.0.0",
     "webpack": "^3.12.0",
     "webpack-cli": "^2.0.13"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=development babel src --out-dir dist",
+    "build": "node tools/build.js",
     "build:example": "cross-env NODE_ENV=development webpack --progress --color",
     "test": "jest"
   },
