--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: node_js
 node_js:
   - "8"
   - "6"
+before_script:
+  - npm install -g babel-cli rollup
 script:
   - npm run build
+  - npm run test
