enchancement: eslint, prettier, husky

--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   ],
   "dependencies": {
     "keypather": "^3.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
     "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -48,11 +50,20 @@
     "envify-loader": "^0.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-prettier": "^2.6.1",
+    "eslint-plugin-react": "^7.10.0",
     "gzip-size": "^4.1.0",
+    "husky": "^0.14.3",
     "jest": "^23.3.0",
     "node-sass": "^4.8.3",
     "node-sass-import": "^1.0.0",
     "npm-run-all": "^4.0.2",
+    "prettier": "^1.13.7",
     "pretty-bytes": "^5.1.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
@@ -67,10 +78,14 @@
     "build": "node tools/build.js",
     "build:example": "cross-env NODE_ENV=development webpack --progress --color",
     "test": "jest",
-    "clean": "git clean -fdX"
+    "clean": "git clean -fdX",
+    "prepublishOnly": "node ./tools/build.js",
+    "watch": "babel ./src -d . --ignore __tests__ --watch",
+    "lint": "eslint src/",
+    "precommit": "npm run lint"
   },
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": ">=16.3.0",
+    "react-dom": ">=16.3.0"
   }
 }
