--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 language: node_js
 node_js:
   - "8"
-  - "6"
-before_script:
-  - npm install -g babel-cli rollup
-script:
-  - npm run build
-  - npm run test
+stages:
+  - lint
+  - build
+  - test
+lint:
+  stage: lint
+  script:
+    - npm run lint
+build:
+  stage: build
+  before_script:
+    - npm install -g babel-cli rollup
+  script:
+    - npm run build
+test:
+  stage: test
+  script:
+    - npm run test    
