--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,14 @@
 language: node_js
 node_js:
   - "8"
-stages:
-  - lint
-  - build
-  - test
-lint:
-  stage: lint
-  script:
-    - npm run lint
-build:
-  stage: build
-  before_script:
-    - npm install -g babel-cli rollup
-  script:
-    - npm run build
-test:
-  stage: test
-  script:
-    - npm run test    
+jobs:
+  include:
+    - stage: lint
+      script:
+        - npm run lint
+    - stage: build and test
+      before_script:
+        - npm install -g babel-cli rollup
+      script:
+        - npm run build
+        - npm run test
