enhancement: rollup node builtins

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+      "prefer-destructuring": 0,
+      "no-console": 0,
       "react/no-unused-prop-types": 0,
       "react/prefer-stateless-function": 0,
       "react/jsx-filename-extension": 0,
