--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "redux"
   ],
   "dependencies": {
-    "keypather": "^3.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
@@ -68,8 +67,8 @@
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^4.0.0",
     "webpack": "^3.12.0",
     "webpack-cli": "^2.0.13"
