--- a/package.json
+++ b/package.json
@@ -70,12 +70,12 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^4.0.0",
-    "webpack": "^3.12.0",
-    "webpack-cli": "^2.0.13"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   },
   "scripts": {
     "build": "node tools/build.js",
-    "build:example": "cross-env NODE_ENV=development webpack --progress --color",
+    "build:example": "webpack --progress --color",
     "test": "jest",
     "clean": "git clean -fdX",
     "prepublishOnly": "node ./tools/build.js",
