--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux"
   ],
   "dependencies": {
+    "json-keypath": "^0.1.1",
     "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
@@ -70,7 +71,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^4.0.0",
-    "webpack": "^4.15.1",
+    "webpack": "^3.12.0",
     "webpack-cli": "^3.0.8"
   },
   "scripts": {
