--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gzip-size": "^4.1.0",
     "husky": "^0.14.3",
     "jest": "^23.3.0",
+    "jsdoc": "^3.5.5",
     "node-sass": "^4.8.3",
     "node-sass-import": "^1.0.0",
     "npm-run-all": "^4.0.2",
@@ -82,6 +83,7 @@
     "prepublishOnly": "node ./tools/build.js",
     "watch": "babel ./src -d . --ignore __tests__ --watch",
     "lint": "eslint src/ ",
+    "createdoc": "jsdoc src -r -d docs",
     "precommit": "npm run lint"
   },
   "peerDependencies": {
