Enhancement/add jsdoc (#12)
* added basic jsdoc info

* added jsdoc, docs and documentation.md

* added validation for input passed to dispatch

* updated module exports

* updated documentation

* 0.2.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-context-redux",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A simple wrapper over React's new Context API, to provide the redux feel for developers",
   "main": "index.js",
   "author": "Jefree Sujit <e.jefree110@gmail.com>",
@@ -60,6 +60,8 @@
     "gzip-size": "^4.1.0",
     "husky": "^0.14.3",
     "jest": "^23.3.0",
+    "jsdoc": "^3.5.5",
+    "jsdoc-to-markdown": "^4.0.1",
     "node-sass": "^4.8.3",
     "node-sass-import": "^1.0.0",
     "npm-run-all": "^4.0.2",
@@ -82,6 +84,8 @@
     "prepublishOnly": "node ./tools/build.js",
     "watch": "babel ./src -d . --ignore __tests__ --watch",
     "lint": "eslint src/ ",
+    "createdoc": "jsdoc src -r -d docs",
+    "generateDoc": "jsdoc2md src/*.js > DOCUMENTATION.md",
     "precommit": "npm run lint"
   },
   "peerDependencies": {
