--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-context-redux",
   "version": "0.2.0",
-  "description": "A simple wrapper over React's new Context API, to provide the redux feel for developers",
+  "description": "A Redux style wrapper over React's Context API",
   "main": "index.js",
   "author": "Jefree Sujit <e.jefree110@gmail.com>",
   "license": "MIT",
+  "unpkg": "umd/react-context-redux.min.js",
   "bugs": {
     "url": "https://github.com/jefreesujit/react-context-redux/issues"
   },
@@ -17,7 +18,8 @@
     "index.js",
     "package.json",
     "README.md",
-    "dist/"
+    "umd/",
+    "es/"
   ],
   "keywords": [
     "react",
