--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jefree Sujit <e.jefree110@gmail.com>",
   "license": "MIT",
   "unpkg": "umd/react-context-redux.min.js",
+  "module": "es/index.js",
   "bugs": {
     "url": "https://github.com/jefreesujit/react-context-redux/issues"
   },
@@ -16,17 +17,17 @@
   },
   "files": [
     "index.js",
+    "createStore.js",
+    "Provider.js",
+    "Connect.js",
     "package.json",
     "README.md",
     "umd/",
     "es/"
   ],
   "keywords": [
-    "react",
-    "redux",
-    "context",
-    "store",
-    "redux"
+    "react", "redux", "context", "store", "redux", "state", "react-context-redux", "react-redux", "react-context","context-api"
+
   ],
   "dependencies": {
     "json-keypath": "^0.1.2",
