--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
   "dependencies": {
     "json-keypath": "^0.1.2",
     "prop-types": "^15.6.2",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-jest": "^23.2.0",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -59,33 +59,34 @@
     "cross-env": "^5.1.4",
     "envify": "^1.2.1",
     "envify-loader": "^0.1.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.0.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-prettier": "^2.6.1",
-    "eslint-plugin-react": "^7.10.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "eslint": "^5.11.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^2.10.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^2.7.0",
+    "eslint-plugin-react": "^7.11.1",
     "gzip-size": "^4.1.0",
     "husky": "^0.14.3",
-    "jest": "^23.3.0",
+    "jest": "^23.6.0",
     "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "^4.0.1",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.11.0",
     "node-sass-import": "^1.0.0",
-    "npm-run-all": "^4.0.2",
-    "prettier": "^1.13.7",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.3",
     "pretty-bytes": "^5.1.0",
+    "redux-logger": "^3.0.6",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-uglify": "^4.0.0",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8"
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "build": "node tools/build.js",
